<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Push Ups Diary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_training">Training</string>
    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_summary">Your Progress Summary</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="day_of_week">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="month_of_year">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="please_start_training_first">Please start the training first.</string>
    <string name="push_ups">Push ups</string>
    <string name="rate_per_minute">Rate per minute</string>
    <string name="title_chart_push_ups_count">Push ups count report</string>
    <string name="title_chart_rate_per_minute">Push ups rate per minute report</string>
    <string name="introduction_message">To start the training, simply position the phone close to your head and start the first push up.</string>
    <string name="introduction_message_no_proximity_sensor">To start the training, simply hit the button with your chin when in lower position to make the count.</string>
    <string name="introduction_message_dont_worry_if_the_count_is_missed">If you miss a count, do not worry about it as you will have a change to correct the number when you are finish.</string>
    <string name="no_data_found">No data found</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="got_it">Got it!</string>
    <string name="next">Next</string>
    <string name="do_not_show_again">Don\'t show again</string>
    <string name="congrat_message_break_best_record">Congratulation! You have achieved a new record of %s push ups within 1 training session!</string>
    <string name="congrat_message_break_last_record">YES! You did more push ups than the last session!</string>
    <string name="congrat_message_new_power_limit">BRAVO! You have pushed yourself to a new power limit: %d per minute</string>
    <string name="resting">Resting…</string>
    <string name="cancel_resting_question">Cancel resting?</string>
    <string name="training_session_completed">This training session is completed.</string>
    <string name="well_done_you_have_complete_this_training_session">Well done! You have complete this training session.</string>
    <string name="congrat_advertisement_is_cleared">This advertisement is temporarily cleared for your hard work!</string>
    <string name="congrat_more_than_offset_push_up">Impressive!!! You have done %d push ups in one go! Keep up the power!!</string>
    <string name="congrat_beat_best_record">Fantastic!! You have break your own best record!!</string>
    <string name="title_activity_about">About Push Ups Diary</string>

    <string name="privacy_statement" translatable="false">
    <![CDATA[<html><body>
        <h3>Push Ups Diary Android App</h3>

        This privacy policy governs the use of the software application Push Ups Diary (“App”)
        for mobile devices that was created by WeryNg (“Developer”).<br /><br />

        <b>What information do we collect?</b><br /><br />

        The Developer does not intentionally collect or make use of any information including device’s GPS location,
        phone contacts, emails, clipboards from your device or provided by you via the App.<br /><br />

        <b>Third party links and advertisement</b><br /><br />

        Occasionally, the app may include or offer third party products or services.
        These third party app links have separate and independent privacy policies. Developer therefore
        have no responsibility or liability for the content and activities of these apps. Nonetheless,
        the Developer seek to protect the user experience on the app and welcome any feedback regarding
        these promotion links. To ensure the best user experience for new user, the app will be ads-free
        for a few days after installation. You have an option to remove ads by purchasing the ads-free version
        using the button below.<br /><br />

        <b>Your consent</b><br /><br />

        By using the app, you consent to this privacy policy<br /><br />

        <b>Feedback</b><br /><br />

        Please use the Contact Developer button below for feedback or feature request. Any feedback and
        contributions are welcome.<br /><br />

        <b>Acknowledgement</b><br /><br />

        MPAndroidChart<br />
        Copyright 2014 Philipp Jahoda<br />

        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
        in compliance with the License. You may obtain a copy of the License at<br />
        http://www.apache.org/licenses/LICENSE-2.0<br />
        Unless required by applicable law or agreed to in writing, software distributed under the License
        is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
        or implied. See the License for the specific language governing permissions and limitations under
        the License.

        </body></html>]]>
    </string>
    <string name="action_about">About</string>
    <string name="start_training">START TRAINING</string>
    <string name="free_style_practice">FREE STYLE PRACTICE</string>
    <string name="summary">SUMMARY</string>
    <string name="best">BEST</string>
    <string name="last">LAST</string>
    <string name="total">TOTAL</string>
    <string name="time">TIME</string>
    <string name="power">POWER</string>
    <string name="avg">AVG</string>
    <string name="push_ups_diary_logo">Push ups diary logo</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="complete">Complete</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="last_record">Last Record</string>
    <string name="best_record">Best Record</string>
    <string name="done_set">Done Set</string>
    <string name="complete_training">Complete Training</string>
    <string name="contact_uri">mailto:nguyennt86@gmail.com?subject=Push Up Diary Android App</string>
    <string name="resting_mode_is_already_started">Resting mode is already started</string>
</resources>
