<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".StartActivity">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        android:src="@drawable/dark_background" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:stretchColumns="0,1,2,3"
            android:id="@+id/tableLayout4"
            android:background="@drawable/summary_box">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@drawable/summary_box_top"></TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/best"
                    style="@style/SummaryLabel"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/last"
                    style="@style/SummaryLabel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/total"
                    style="@style/SummaryLabel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/time"
                    style="@style/SummaryLabel" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="999"
                    android:id="@+id/tvBest"
                    android:layout_gravity="center_horizontal"
                    style="@style/SummaryFigure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="999"
                    android:id="@+id/tvLast"
                    android:layout_gravity="center_horizontal"
                    style="@style/SummaryFigure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="999"
                    android:id="@+id/tvTotal"
                    android:layout_gravity="center_horizontal"
                    style="@style/SummaryFigure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00:00"
                    android:id="@+id/tvTime"
                    android:layout_gravity="center_horizontal"
                    style="@style/SummaryFigure" />
            </TableRow>
        </TableLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/ivLogo"
            android:layout_above="@+id/tableLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tableLayout4"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/logo_margin"
            android:contentDescription="@string/push_ups_diary_logo"
            android:padding="16dp"
            android:cropToPadding="false"
            android:src="@drawable/logo_pushup_diary_4"/>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:orientation="horizontal"
            android:gravity="center_vertical|top"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/tableLayout3">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_training"
                    android:id="@+id/btnStartTraining"
                    android:layout_column="0"
                    android:layout_span="2"
                    style="@style/OrangeButton"
                    android:layout_marginBottom="5dp"
                    android:focusable="false"
                    android:layout_marginLeft="@dimen/activity_start_button_margin"
                    android:layout_marginRight="@dimen/activity_start_button_margin"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/free_style_practice"
                    android:id="@+id/btnPractice"
                    android:layout_column="0"
                    android:layout_weight="1"
                    style="@style/OrangeButton"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="@dimen/activity_start_button_margin"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:id="@+id/btnLog"
                    android:layout_column="1"
                    android:layout_weight="1"
                    style="@style/OrangeButton"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="@dimen/activity_start_button_margin"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>



</FrameLayout>

